# geo_names

./: .gitignore  CMakeLists.txt  README.md  generate.py
include/: geo_names.hpp  geo_names_imgui.hpp  geonames.hpp  geonames_imgui.hpp
lib/sqlite3/: CMakeLists.txt
sqlite3/: CMakeLists.txt
src/: geo_names.cpp  geonames.cpp
test/: test.cpp
tests/: test.cpp
