cmake_minimum_required(VERSION 3.24)
project(geo_names)

add_library(geo_names src/geo_names.cpp lib/sqlite3/sqlite3.c)
target_include_directories(geo_names PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(geo_names PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/sqlite3)
target_compile_definitions(geo_names PRIVATE SQLITE_ENABLE_FTS5 SQLITE_ENABLE_DESERIALIZE)
set_target_properties(geo_names PROPERTIES CXX_STANDARD 23)

if(PROJECT_IS_TOP_LEVEL)
    set(BINARY_DIR ${CMAKE_BINARY_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
    make_directory(${BINARY_DIR})
    add_executable(test test/test.cpp)
    target_link_libraries(test geo_names)
    set_target_properties(test PROPERTIES OUTPUT_NAME geo_names_test)
    set_target_properties(test PROPERTIES CXX_STANDARD 23)
endif()
