cmake_minimum_required(VERSION 3.24)
project(geonames)

add_library(geonames src/geonames.cpp lib/sqlite3/sqlite3.c)
add_library(geonames::geonames ALIAS geonames)
target_include_directories(geonames PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(geonames PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/sqlite3)
target_compile_definitions(geonames PRIVATE SQLITE_ENABLE_FTS5 SQLITE_ENABLE_DESERIALIZE)
set_target_properties(geonames PROPERTIES CXX_STANDARD 23)

if(PROJECT_IS_TOP_LEVEL)
    set(BINARY_DIR ${CMAKE_BINARY_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${BINARY_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${BINARY_DIR})
    make_directory(${BINARY_DIR})
    add_executable(test tests/test.cpp)
    target_link_libraries(test geonames)
    set_target_properties(test PROPERTIES OUTPUT_NAME geonames_test)
    set_target_properties(test PROPERTIES CXX_STANDARD 23)
endif()
